--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
     <div class="bg-hearts" id="bg-hearts"></div>
 
     <div id="loading-screen" class="screen active">
-        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.vecteezy.com%2Ffree-vector%2Fhappy-valentines-day&psig=AOvVaw0OBk5iExyY_JdIGQVC6ttA&ust=1770656436498000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCMCk17GvypIDFQAAAAAdAAAAABAE" alt="Cute loading" class="loader-gif">
+        <img src="<a href="https://www.vecteezy.com/vector-art/5099596-happy-valentine-s-day-poster-or-banner-with-cute-font-and-many-sweet-hearts-on-red-background-promotion-and-shopping-template-or-background-for-love-and-valentine-s-day-concept">happy-valentine-s-day-poster-or-banner-with-cute-font-and-many-sweet-hearts-on-red-background-promotion-and-shopping-template-or-background-for-love-and-valentine-s-day-concept Vectors by Vecteezy</a>" alt="Cute loading" class="loader-gif">
         <h2 class="cursive">A Valentine Moment</h2>
         <p style="font-size: 0.8rem; opacity: 0.7;">is being prepared for you...</p>
         <div class="loading-bar"><div class="progress" id="progress-bar"></div></div>
